--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "local": "gulp --gulpfile ./_tools/server.js --cwd .",
     "build": "npm run lint && gulp $NODE_DEBUG_OPTION --gulpfile ./_tools/server.js --cwd . build",
     "version": "npm run build && git add obniz.js && git add obniz.min.js && git add obniz.node6_10.js",
-    "lint": "eslint --fix . --rulesdir eslint/rule",
-    "precommit": "lint-staged"
+    "lint": "eslint --fix . --rulesdir eslint/rule"
   },
   "lint-staged": {
     "*.js": [
@@ -40,23 +39,23 @@
     "chokidar": "^2.0.4",
     "concat-with-sourcemaps": "^1.1.0",
     "ejs": "^2.6.1",
-    "eslint": "^5.7.0",
-    "eslint-config-prettier": "^3.1.0",
+    "eslint": "^5.13.0",
+    "eslint-config-prettier": "^3.6.0",
     "eslint-plugin-jasmine": "^2.10.1",
     "eslint-plugin-prettier": "^2.7.0",
     "express": "^4.16.4",
-    "get-port": "^4.0.0",
+    "get-port": "^4.1.0",
     "glob": "^7.1.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-ejs": "^3.2.0",
+    "gulp-ejs": "^3.3.0",
     "gulp-filter": "^5.1.0",
     "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.2.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-sort": "^2.0.0",
     "gulp-util": "^3.0.8",
-    "gulp-yaml": "^2.0.2",
+    "gulp-yaml": "^2.0.3",
     "husky": "^0.14.3",
     "json-loader": "^0.5.7",
     "lint-staged": "^7.3.0",
@@ -66,29 +65,29 @@
     "mocha-sinon": "^2.1.0",
     "natives": "^1.1.6",
     "ncp": "^2.0.0",
-    "node-notifier": "^5.3.0",
+    "node-notifier": "^5.4.0",
     "nyc": "^12.0.2",
     "path": "^0.12.7",
-    "prettier": "^1.14.3",
+    "prettier": "^1.16.4",
     "sinon": "^6.3.5",
     "svg-to-png": "^3.1.2",
-    "through2": "^2.0.3",
+    "through2": "^2.0.5",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "vinyl": "^2.2.0",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
     "webpack-node-externals": "^1.7.2",
-    "webpack-stream": "^5.1.1",
+    "webpack-stream": "^5.2.1",
     "yaml-loader": "^0.5.0"
   },
   "dependencies": {
     "eventemitter3": "^3.1.0",
-    "js-yaml": "^3.12.0",
+    "js-yaml": "^3.12.1",
     "node-dir": "^0.1.17",
-    "node-fetch": "^2.2.0",
+    "node-fetch": "^2.3.0",
     "semver": "^5.6.0",
     "tv4": "^1.3.0",
-    "ws": "^6.1.0"
+    "ws": "^6.1.3"
   },
   "bugs": {
     "url": "https://github.com/obniz/obniz/issues"
